# fesom_jax

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: core2_full.yaml  core2_full_bench.yaml  dars.yaml  dars_full_bench.yaml  dars_kpp_evp.yaml  dars_kpp_evp_dt180.yaml  dars_kpp_evp_wsplit.yaml  dars_kpp_evp_wsplit_dt120.yaml  dars_kpp_mevp.yaml  dars_tke_mevp.yaml  farc.yaml  farc_full_bench.yaml  farc_kpp_mevp.yaml  farc_tke_evp.yaml  farc_tke_mevp.yaml  forca20_full_bench.yaml  forca20_kpp_evp.yaml  forca20_kpp_evp_dt240.yaml  forca20_tke_mevp.yaml  forca20_tke_mevp_prod.yaml  ng5.yaml  ng5_full_bench.yaml  pi_demo.yaml
docs/: CODE_REVIEW-20260703.md  DATA.md  ENV.md  FORCING_MESHES.md  HANDOFF-20260701-R1-rerun.md  HANDOFF-20260701-salinity-drift-investigation.md  HANDOFF-20260701-sst-pattern-investigation.md  JAX_RAGGED_A2A_BUG.md  JUPITER_SCALING.md  JUPITER_SCALING_FINDINGS.md  LIMITER_GRADIENTS.md  MESH_EXPORT_LAYOUT.md  NEW_MESH.md  NEXT_SESSION_PROMPT.md  OBS_DATASETS.md  PARALLELISM.md  PARTITIONS.md  PORTING_LESSONS.md  REFERENCE_RUNS.md  USER_GUIDE.md
docs/plans/: 20260605-fesom-jax-port.md  20260606-fesom-jax-core2.md  20260606-fesom-jax-phase6-seaice.md  20260607-fesom-jax-gmredi.md  20260607-fesom-jax-kpp.md  20260607-fesom-jax-paramtune.md  20260607-fesom-jax-phase8-sharding.md  20260607-fesom-jax-seaice-climate-bias.md  20260608-fesom-jax-phase8b-scaling.md  20260611-fesom-jax-mevp.md  20260611-fesom-jax-tke.md  20260611-fesom-jax-zstar.md  20260715-fesom-jax-ondevice-forcing.md  20260715-m7levers-session2-FINDINGS.md  20260716-levers-on-scaling-figure.md  20260716-m7levers-session3-FINDINGS.md
examples/: 01_pi_quickstart.ipynb  02_core2_realistic.ipynb  03_how_the_model_works.ipynb  tutorial.ipynb
experiments/padded_halo_a2a/: README.md  bench_padded.py  gate_forward_grad.py  padded_halo.py
fesom_jax/: __init__.py  ale.py  calibrate.py  canonical_redist.py  config.py  core2_forcing.py  cvmix_tke.py  diagnostics.py  eki.py  eos.py  forcing.py  forcing_local.py  gm.py  gm_redi.py  halo.py  halo_points.py  ic.py  ice.py  ice_adv.py  ice_coupling.py  ice_evp.py  ice_mevp.py  ice_step.py  ice_thermo.py  integrate.py  integrate_sharded.py  io_dump.py  jra55.py  kpp.py  longwindow.py  mesh.py  momentum.py  obs_compare.py  obs_ice.py  ops.py  params.py  partit.py  paths.py  pgf.py  phc_ic.py  (+17 more)
fesom_jax/scripts/: eps_climate_compare.py
fesom_jax/tests/: conftest.py  test_ale.py  test_ale_zstar.py  test_calib_twin.py  test_calibrate.py  test_canonical_redist.py  test_config.py  test_core2_step.py  test_diagnostics.py  test_eki.py  test_eos.py  test_forcing.py  test_forcing_sharded.py  test_gm_bolus.py  (+65 more)
scripts/: bench_canonical_mn.sbatch  bench_canonical_output.sbatch  bench_core2_2node.sbatch  bench_core2_4node.sbatch  bench_core2_decomp.sbatch  bench_core2_full.sbatch  bench_dars_dist16.sbatch  bench_dars_multinode.sbatch  bench_dars_scaling.sbatch  bench_farc_full.sbatch  bench_farc_scaling.sbatch  bench_forward_scaling.py  bench_forward_scaling.sbatch  bench_ng5_dist32.sbatch  bench_ng5_dist64.sbatch  bench_ng5_multinode.sbatch  build_zenodo_package.py  cache_phc_ic.py  cache_phc_ic_forca20.sbatch  cache_phc_ic_ng5.sbatch  capture_core2_ssh_rhs.py  capture_core2_ssh_rhs.sbatch  chain_submit.sh  check_core2_step.py  check_forcing.py  core2_adjoint_window_sweep.py  core2_adjoint_window_sweep.sbatch  core2_all3_climate.sbatch  core2_all_on_smoke.py  core2_det_test.sbatch  core2_forcing_measure.sbatch  core2_gm_grad_gate.py  core2_gm_grad_gate.sbatch  core2_gm_stability_gpu.sh  core2_gm_stability_run.py  core2_grad_gate.py  core2_grad_gate.sbatch  core2_ice_grad_gate.py  core2_ice_grad_gate.sbatch  core2_ice_stability_gpu.sh  (+144 more)
(+393 files in other folders)
