[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fesom-jax"
version = "0.0.0"
description = "Differentiable FESOM2 ocean model in JAX (for hybrid ML parameterizations)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.34",
    "numpy>=1.24",
    "scipy>=1.10",       # host-side SSH stiffness assembly (ssh.build_ssh_operator)
    "netCDF4>=1.6",      # NetCDF-4 PHC/JRA55/SSS readers (Phase 5)
    "zarr>=2.17,<3",     # sharded gather-free model output (fesom_jax.zarr_output, Phase 8b)
    "pyyaml>=6.0",       # single-YAML RunConfig (fesom_jax.run_config, model-paper A3)
]

[project.optional-dependencies]
# GPU build: CUDA 12 + cuDNN are pulled in as pip wheels (no system CUDA module
# needed on Levante). Install with:  pip install -e ".[cuda,dev]"
cuda = ["jax[cuda12]>=0.4.34"]
dev = ["pytest>=8"]
viz = ["matplotlib>=3.7"]   # scaling/SYPD plots (scripts/plot_sypd.py)

[tool.setuptools.packages.find]
include = ["fesom_jax*"]

[tool.pytest.ini_options]
testpaths = ["fesom_jax/tests"]
